--- a/notebooks/1_project/brochure_builder.ipynb
+++ b/notebooks/1_project/brochure_builder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BUSINESS CHALLENGE:\n",
+    "# BUSINESS CHALLENGE:\n",
     "\n",
     "Create a product that builds a Brochure for a company to be used for prospective clients, investors and potential recruits.\n",
     "\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
     "        instructions=instructions,\n",
     "        input=get_links_user_prompt(website),\n",
     "        text={\"format\": {\"type\": \"json_object\"}},\n",
-    "        store=False\n",
+    "        store=False,\n",
     "    )\n",
     "    return json.loads(response.output_text)"
    ]
