Added dotenv support to load environment variables and updated OpenAI client initialization in place_asistant notebook.

--- a/notebooks/2_project/place_asistant.ipynb
+++ b/notebooks/2_project/place_asistant.ipynb
@@ -19,8 +19,10 @@
     "from openai import OpenAI\n",
     "import os\n",
     "import requests\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "client = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\", \"<your OpenAI API key if not set as env var>\"))"
+    "load_dotenv()\n",
+    "client = OpenAI()"
    ]
   },
   {
