Update Python version to 3.12, add new dependencies (tensorflow, numpy, transformers), and clean up notebook code formatting. Remove unnecessary uv.lock file and adjust project structure in Makefile and pyproject.toml.

--- a/notebooks/1_project/brochure_builder.ipynb
+++ b/notebooks/1_project/brochure_builder.ipynb
@@ -30,7 +30,6 @@
    "source": [
     "# imports\n",
     "\n",
-    "import os\n",
     "import requests\n",
     "import json\n",
     "from dotenv import load_dotenv\n",
@@ -51,8 +50,9 @@
     "\n",
     "# Some websites need you to use proper headers when fetching them:\n",
     "headers = {\n",
-    " \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
+    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36\"\n",
     "}\n",
+    "\n",
     "\n",
     "class Website:\n",
     "    \"\"\"\n",
@@ -63,7 +63,7 @@
     "        self.url = url\n",
     "        response = requests.get(url, headers=headers)\n",
     "        self.body = response.content\n",
-    "        soup = BeautifulSoup(self.body, 'html.parser')\n",
+    "        soup = BeautifulSoup(self.body, \"html.parser\")\n",
     "        self.title = soup.title.string if soup.title else \"No title found\"\n",
     "        if soup.body:\n",
     "            for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
@@ -71,7 +71,7 @@
     "            self.text = soup.body.get_text(separator=\"\\n\", strip=True)\n",
     "        else:\n",
     "            self.text = \"\"\n",
-    "        links = [link.get('href') for link in soup.find_all('a')]\n",
+    "        links = [link.get(\"href\") for link in soup.find_all(\"a\")]\n",
     "        self.links = [link for link in links if link]\n",
     "\n",
     "    def get_contents(self):\n",
@@ -103,9 +103,10 @@
    "source": [
     "client = OpenAI()\n",
     "\n",
+    "\n",
     "def get_links(url):\n",
     "    website = Website(url)\n",
-    "    \n",
+    "\n",
     "    with open(\"prompt.txt\", \"r\", encoding=\"utf-8\") as f:\n",
     "        instructions = f.read()\n",
     "\n",
@@ -151,7 +152,7 @@
     "def get_brochure_user_prompt(company_name, url):\n",
     "    user_prompt = f\"You are looking at a company called: {company_name}\\nHere are the contents of its landing page and other relevant pages; use this information to build a short brochure of the company in markdown.\\n\"\n",
     "    user_prompt += get_all_details(url)\n",
-    "    user_prompt = user_prompt[:5_000] # Truncate if more than 5,000 characters\n",
+    "    user_prompt = user_prompt[:5_000]  # Truncate if more than 5,000 characters\n",
     "    return user_prompt"
    ]
   },
@@ -169,7 +170,7 @@
     "        model=\"gpt-4o-mini\",\n",
     "        instructions=instructions,\n",
     "        input=get_brochure_user_prompt(company_name, url),\n",
-    "        store=False\n",
+    "        store=False,\n",
     "    )\n",
     "    result = response.output_text\n",
     "    display(Markdown(result))"
@@ -408,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
