--- a/notebooks/2_project/place_asistant.ipynb
+++ b/notebooks/2_project/place_asistant.ipynb
@@ -47,17 +47,20 @@
     "            \"behavioral_metrics\": {\n",
     "                \"app_usage\": {\n",
     "                    \"daily\": 2,  # hours\n",
-    "                    \"weekly\": 14  # hours\n",
+    "                    \"weekly\": 14,  # hours\n",
     "                },\n",
     "                \"favourite_post_categories\": [\"Nature\", \"Food\", \"Books\"],\n",
     "                \"active_time\": \"Evening\",\n",
     "            },\n",
     "            \"recent_searches\": [\"Italian restaurants nearby\", \"Book clubs\"],\n",
-    "            \"recent_interactions\": [\"Liked a post about 'Best Pizzas in New York'\", \"Commented on a post about 'Central Park Trails'\"],\n",
+    "            \"recent_interactions\": [\n",
+    "                \"Liked a post about 'Best Pizzas in New York'\",\n",
+    "                \"Commented on a post about 'Central Park Trails'\",\n",
+    "            ],\n",
     "            \"user_rank\": \"Gold\",  # based on some internal ranking system\n",
     "        }\n",
     "    else:\n",
-    "        return None\n"
+    "        return None"
    ]
   },
   {
@@ -75,7 +78,7 @@
     "    else:\n",
     "        print(f\"Google Place Details API request failed with status code {response.status_code}\")\n",
     "        print(f\"Response content: {response.content}\")\n",
-    "        return None\n"
+    "        return None"
    ]
   },
   {
@@ -95,13 +98,13 @@
     "        lat = customer_profile[\"location\"][\"latitude\"]\n",
     "        lng = customer_profile[\"location\"][\"longitude\"]\n",
     "\n",
-    "        API_KEY = os.getenv('GOOGLE_PLACES_API_KEY')  # retrieve API key from environment variable\n",
+    "        API_KEY = os.getenv(\"GOOGLE_PLACES_API_KEY\")  # retrieve API key from environment variable\n",
     "        LOCATION = f\"{lat},{lng}\"\n",
     "        RADIUS = 500  # search within a radius of 500 meters\n",
     "        TYPE = place_type\n",
     "\n",
     "        # If the place_type is restaurant and food_preference is not None, include it in the API request\n",
-    "        if place_type == 'restaurant' and food_preference:\n",
+    "        if place_type == \"restaurant\" and food_preference:\n",
     "            URL = f\"https://maps.googleapis.com/maps/api/place/nearbysearch/json?location={LOCATION}&radius={RADIUS}&type={TYPE}&keyword={food_preference}&key={API_KEY}\"\n",
     "        else:\n",
     "            URL = f\"https://maps.googleapis.com/maps/api/place/nearbysearch/json?location={LOCATION}&radius={RADIUS}&type={TYPE}&key={API_KEY}\"\n",
@@ -112,16 +115,31 @@
     "            places = []\n",
     "            for place in results[:2]:  # limit to top 2 results\n",
     "                place_id = place.get(\"place_id\")\n",
-    "                place_details = get_place_details(place_id, API_KEY)  # Get the details of the place\n",
+    "                place_details = get_place_details(\n",
+    "                    place_id, API_KEY\n",
+    "                )  # Get the details of the place\n",
     "\n",
     "                place_name = place_details.get(\"name\", \"N/A\")\n",
-    "                place_types = next((t for t in place_details.get(\"types\", []) if t not in [\"food\", \"point_of_interest\"]), \"N/A\")  # Get the first type of the place, excluding \"food\" and \"point_of_interest\"\n",
+    "                place_types = next(\n",
+    "                    (\n",
+    "                        t\n",
+    "                        for t in place_details.get(\"types\", [])\n",
+    "                        if t not in [\"food\", \"point_of_interest\"]\n",
+    "                    ),\n",
+    "                    \"N/A\",\n",
+    "                )  # Get the first type of the place, excluding \"food\" and \"point_of_interest\"\n",
     "                place_rating = place_details.get(\"rating\", \"N/A\")  # Get the rating of the place\n",
-    "                total_ratings = place_details.get(\"user_ratings_total\", \"N/A\")  # Get the total number of ratings\n",
-    "                place_address = place_details.get(\"vicinity\", \"N/A\")  # Get the vicinity of the place\n",
+    "                total_ratings = place_details.get(\n",
+    "                    \"user_ratings_total\", \"N/A\"\n",
+    "                )  # Get the total number of ratings\n",
+    "                place_address = place_details.get(\n",
+    "                    \"vicinity\", \"N/A\"\n",
+    "                )  # Get the vicinity of the place\n",
     "\n",
-    "                if ',' in place_address:  # If the address contains a comma\n",
-    "                    street_address = place_address.split(',')[0]  # Split by comma and keep only the first part\n",
+    "                if \",\" in place_address:  # If the address contains a comma\n",
+    "                    street_address = place_address.split(\",\")[\n",
+    "                        0\n",
+    "                    ]  # Split by comma and keep only the first part\n",
     "                else:\n",
     "                    street_address = place_address\n",
     "\n",
@@ -133,11 +151,13 @@
     "            return places\n",
     "        else:\n",
     "            print(f\"Google Places API request failed with status code {response.status_code}\")\n",
-    "            print(f\"Response content: {response.content}\")  # print out the response content for debugging\n",
+    "            print(\n",
+    "                f\"Response content: {response.content}\"\n",
+    "            )  # print out the response content for debugging\n",
     "            return []\n",
     "    except Exception as e:\n",
     "        print(f\"Error during the Google Places API call: {e}\")\n",
-    "        return []\n"
+    "        return []"
    ]
   },
   {
@@ -153,23 +173,26 @@
     "\n",
     "    customer_profile_str = json.dumps(customer_profile)\n",
     "\n",
-    "    food_preference = customer_profile.get('preferences', {}).get('food', [])[0] if customer_profile.get('preferences', {}).get('food') else None\n",
-    "\n",
+    "    food_preference = (\n",
+    "        customer_profile.get(\"preferences\", {}).get(\"food\", [])[0]\n",
+    "        if customer_profile.get(\"preferences\", {}).get(\"food\")\n",
+    "        else None\n",
+    "    )\n",
     "\n",
     "    response = client.chat.completions.create(\n",
     "        model=\"gpt-3.5-turbo\",\n",
     "        messages=[\n",
-    "    {\n",
-    "        \"role\": \"system\",\n",
-    "        \"content\": f\"You are a sophisticated AI assistant, a specialist in user intent detection and interpretation. Your task is to perceive and respond to the user's needs, even when they're expressed in an indirect or direct manner. You excel in recognizing subtle cues: for example, if a user states they are 'hungry', you should assume they are seeking nearby dining options such as a restaurant or a cafe. If they indicate feeling 'tired', 'weary', or mention a long journey, interpret this as a request for accommodation options like hotels or guest houses. However, remember to navigate the fine line of interpretation and assumption: if a user's intent is unclear or can be interpreted in multiple ways, do not hesitate to politely ask for additional clarification. Make sure to tailor your responses to the user based on their preferences and past experiences which can be found here {customer_profile_str}\"\n",
-    "    },\n",
-    "    {\"role\": \"user\", \"content\": user_input}\n",
-    "],\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": f\"You are a sophisticated AI assistant, a specialist in user intent detection and interpretation. Your task is to perceive and respond to the user's needs, even when they're expressed in an indirect or direct manner. You excel in recognizing subtle cues: for example, if a user states they are 'hungry', you should assume they are seeking nearby dining options such as a restaurant or a cafe. If they indicate feeling 'tired', 'weary', or mention a long journey, interpret this as a request for accommodation options like hotels or guest houses. However, remember to navigate the fine line of interpretation and assumption: if a user's intent is unclear or can be interpreted in multiple ways, do not hesitate to politely ask for additional clarification. Make sure to tailor your responses to the user based on their preferences and past experiences which can be found here {customer_profile_str}\",\n",
+    "            },\n",
+    "            {\"role\": \"user\", \"content\": user_input},\n",
+    "        ],\n",
     "        temperature=0,\n",
     "        tools=[\n",
     "            {\n",
     "                \"type\": \"function\",\n",
-    "                \"function\" : {\n",
+    "                \"function\": {\n",
     "                    \"name\": \"call_google_places_api\",\n",
     "                    \"description\": \"This function calls the Google Places API to find the top places of a specified type near a specific location. It can be used when a user expresses a need (e.g., feeling hungry or tired) or wants to find a certain type of place (e.g., restaurant or hotel).\",\n",
     "                    \"parameters\": {\n",
@@ -177,24 +200,19 @@
     "                        \"properties\": {\n",
     "                            \"place_type\": {\n",
     "                                \"type\": \"string\",\n",
-    "                                \"description\": \"The type of place to search for.\"\n",
+    "                                \"description\": \"The type of place to search for.\",\n",
     "                            }\n",
-    "                        }\n",
+    "                        },\n",
     "                    },\n",
-    "                    \"result\": {\n",
-    "                        \"type\": \"array\",\n",
-    "                        \"items\": {\n",
-    "                            \"type\": \"string\"\n",
-    "                        }\n",
-    "                    }\n",
-    "                }\n",
+    "                    \"result\": {\"type\": \"array\", \"items\": {\"type\": \"string\"}},\n",
+    "                },\n",
     "            }\n",
     "        ],\n",
     "    )\n",
     "\n",
     "    print(response.choices[0].message.tool_calls)\n",
     "\n",
-    "    if response.choices[0].finish_reason=='tool_calls':\n",
+    "    if response.choices[0].finish_reason == \"tool_calls\":\n",
     "        function_call = response.choices[0].message.tool_calls[0].function\n",
     "        if function_call.name == \"call_google_places_api\":\n",
     "            place_type = json.loads(function_call.arguments)[\"place_type\"]\n",
@@ -204,8 +222,7 @@
     "            else:\n",
     "                return \"I couldn't find any places of interest nearby.\"\n",
     "\n",
-    "    return \"I am sorry, but I could not understand your request.\"\n",
-    "\n"
+    "    return \"I am sorry, but I could not understand your request.\""
    ]
   },
   {
@@ -217,7 +234,7 @@
     "user_id = \"user1234\"\n",
     "user_input = \"I'm hungry\"\n",
     "output = provide_user_specific_recommendations(user_input, user_id)\n",
-    "print(output)\n"
+    "print(output)"
    ]
   }
  ],
@@ -229,7 +246,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.13.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
